email_field instead of text_field.

--- a/app/views/login/lost_password.html.erb
+++ b/app/views/login/lost_password.html.erb
@@ -1,7 +1,7 @@
 <h1>E-mail me my password</h1>
 <p>Enter the email address you used to register on the system below.  A password will be emailed to you.</p>
 <%= form_tag(:action => 'send_password') do %>
-<p>Your e-mail address: <%= text_field_tag 'email', @email %></p>
+<p>Your e-mail address: <%= email_field_tag 'email', @email %></p>
 <%= submit_tag 'Send me my password' %>
 <% end %>
 
