--- a/app/views/posted_talks/edit.html.erb
+++ b/app/views/posted_talks/edit.html.erb
@@ -16,7 +16,7 @@
 	<%= f.text_field :name_of_speaker, :size => '60', :class => 'wide'  %>
 	
 	<h3>Speaker's e-mail</h3>
-	<%= f.text_field :speaker_email, :size => '60', :class => 'wide'  %>
+	<%= f.email_field :speaker_email, :size => '60', :class => 'wide'  %>
 
 	<h3>Title</h3>
 	<%= f.text_field :title, {:size => 60, :class => 'wide' } %>
