--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -6,7 +6,7 @@
 
 <%= form_tag(:action => 'do_login') do %>
 <table>
-	<tr><td>Your e-mail:</td><td><%= text_field_tag 'email', @email %></td></tr>
+	<tr><td>Your e-mail:</td><td><%= email_field_tag 'email', @email %></td></tr>
 	<tr><td>Your password:</td><td><%= password_field_tag 'password'%></td></tr>
 </table>
 <%= submit_tag 'Log in' %>
