Specify width of modals relatively. Now modals also scroll.

--- a/app/assets/stylesheets/talks-screen.css
+++ b/app/assets/stylesheets/talks-screen.css
@@ -608,7 +608,7 @@ div#tellafriend form {
 
 
 .lean_modal {
-    width: 52em;
+    width: 70%;
 padding: 30px; 
     display:none;
 
@@ -618,7 +618,9 @@ padding: 30px;
         box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7);
        
 }
-
+.lean_modal textarea{
+    width: 100%;
+}
 
 #lean_overlay {
     position: fixed;
