Removed prototype.js and prototype_legacy_helper dependency. Todo: implement jQuery based calendar.

--- a/app/views/custom_view/index.html.erb
+++ b/app/views/custom_view/index.html.erb
@@ -48,7 +48,7 @@ Show a maximum of <%= text_field 'view_parameters', 'limit', "size" => 3 %> talk
 
 </form>
 
-<%= keep_url_in_sync_with_form @custom_view, 'viewform', 'viewurl' %>
+<%= keep_url_in_sync_with_form @custom_view, '#viewform', '#viewurl' %>
 
 <p>&nbsp;</p>
 <h2>4. Access your custom layout</h2>
