--- a/app/views/talk/_help_talk_speaker_email.html.erb
+++ b/app/views/talk/_help_talk_speaker_email.html.erb
@@ -3,7 +3,7 @@
 <p>Please enter the speaker's e-mail address. If you do not know it, please leave it blank. As you start typing a list of suggestions will appear below. Click on a suggestion to enter their details:</p>
 
 <% if User.current %>
-<%= observe_field @prefix+'speaker_email',  :frequency => 1, :update => 'speakers', :url => { :action=> 'speaker_email_list' }, :with => "'search=' + encodeURIComponent(value)+'&prefix=#{@prefix}'" %>
+<%= my_observe_field '#'+@prefix+'speaker_email', :update => '#speakers', :url => "'%s?search='+value+'&prefix=%s'"%[talk_path(:action => 'speaker_email_list'), @prefix] %>
 <% end %>
 <ul>
 <div id='speakers'>
