--- a/app/views/talk/_help_talk_venue_name.html.erb
+++ b/app/views/talk/_help_talk_venue_name.html.erb
@@ -6,7 +6,7 @@
 
 	<p>Or, if you start typing the name of the venue, I will make some suggestions below. If the venue is not shown, please just continue to type the name of the venue and it will be recorded for next time.</p>
 	<% if User.current %>
-	<%= observe_field @prefix+'venue_name',  :frequency => 1, :update => 'venues', :url => { :action=> 'venue_list' }, :with => "'search=' + encodeURIComponent(value)+'&prefix=#{@prefix}'" %>
+	<%= my_observe_field '#'+@prefix+'venue_name', :update => '#venues', :url => "'%s?search='+value+'&prefix=%s'"%[talk_path(:action => 'venue_list'), @prefix] %>
 	<% end %>
 	<ul>
 	<div id='venues'>
