--- a/app/views/posted_talks/edit.html.erb
+++ b/app/views/posted_talks/edit.html.erb
@@ -50,10 +50,10 @@ Please copy &amp; paste the seminar announcement text (e.g., from an email) into
 </div>
 <script>
 var talk_edit_rules = {
-	'#edittalk input#posted_talk_title' : function(el){ default_value(el,'Title to be confirmed'); },
-	'#edittalk input#posted_talk_name_of_speaker' : function(el){ default_value(el,'Speaker to be confirmed'); },
-	'#edittalk textarea#posted_talk_abstract' : function(el){ default_value(el,'Abstract not available'); },	
-	'#edittalk input#posted_talk_venue_name' : function(el){ default_value(el,'Venue to be confirmed'); }
+	'#edittalk input#posted_talk_title' : function(el){ jQuery(el).talks('default_value','Title to be confirmed'); },
+	'#edittalk input#posted_talk_name_of_speaker' : function(el){ jQuery(el).talks('default_value','Speaker to be confirmed'); },
+	'#edittalk textarea#posted_talk_abstract' : function(el){ jQuery(el).talks('default_value','Abstract not available'); },	
+	'#edittalk input#posted_talk_venue_name' : function(el){ jQuery(el).talks('default_value','Venue to be confirmed'); }
 }
 
 Behaviour.register(talk_edit_rules);
@@ -63,8 +63,8 @@ Behaviour.register(talk_edit_rules);
    (function ($) {
    $(document).ready(function()
     {
-        $('#edittalk input').talk_helper(<%= @talk.series.id %>, 'posted_talk_');
-        $('#edittalk textarea').talk_helper(<%= @talk.series.id %>, 'posted_talk_');
+        $('#edittalk input').talks('helper',<%= @talk.series.id %>, 'posted_talk_');
+        $('#edittalk textarea').talks('helper',<%= @talk.series.id %>, 'posted_talk_');
 
 
        $("#smartform form").submit(function() { parse_smart_form(jQuery("#inputbox")); return false;});
