Implemented calendar using bootstrap-datepicker.js from https://github.com/eternicode/bootstrap-datepicker.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require bootstrap.min
  *= require bootstrap-responsive.min
+ *= require datepicker
  *= require talks-screen
  *= require calendar-blue
  *= require talk-help
