--- a/app/views/talk/edit.html.erb
+++ b/app/views/talk/edit.html.erb
@@ -82,7 +82,7 @@ Behaviour.register(talk_edit_rules);
        $('input#talk_send_speaker_email').click(function() {
           $('div#speaker_email').slideToggle(this.checked);
        });
-       $('#talk_date_string').datepicker({ format: 'yyyy/mm/dd'});
+       $('#talk_date_string').datepicker({ dateFormat: 'yy/mm/dd'});
     });
     })(jQuery);
 </script>
