Removed mentions to talks.cam and cambridge.

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -193,7 +193,7 @@ body.application table#container {
 					<%= yield %>
 				</td>
 				<td class='related'>
-					<%= link_to image_tag('talkslogosmall.gif',:width => "61", :height =>"41", :alt => '[Talks.cam]'), home_url %>
+					<%= link_to SITE_NAME, home_url %>
 					<%= render :partial => 'related' %>
 				</td>
 			</tr>
