--- a/app/views/shared/_sidebox.html.erb
+++ b/app/views/shared/_sidebox.html.erb
@@ -1,5 +1,3 @@
-<div class='fullwidthlinks'>
-
-<%= render 'shared/user_information' %>
-
+<div id="talks-calendar">
 </div>
+<%= render :partial => 'related' %>
