--- a/app/views/layouts/with_related.html.erb
+++ b/app/views/layouts/with_related.html.erb
@@ -7,9 +7,8 @@
     <%= render 'shared/breadcrumbs' %>
     <%= show_flash %>
     <div class="row">
-      <div class="span2"><%= render :partial => 'shared/sidebox' %></div>
-      <div class="span7"><a name="startcontent" id="startcontent"></a><%= yield %></div>
-      <div class="span3"><%= render :partial => 'related' %></div>
+      <div class="span9"><a name="startcontent" id="startcontent"></a><%= yield %></div>
+      <div class="span3 sidebox"><%= render :partial => 'shared/sidebox' %></div>
     </div>
   </div>
   <%= render 'shared/footer'%>
