--- a/app/views/show/_related.html.erb
+++ b/app/views/show/_related.html.erb
@@ -29,3 +29,10 @@
 	<% next if related_talk.talk.ex_directory? %>
 	<%= link_talk related_talk.talk %>
 <% end %>
+
+<script>
+(function($){
+  $(document).ready(function() {
+$('#talks-calendar').talks('add_talks', [<%= @talks.map(&:start_time).map { |t| 'new Date(%d,%d,%d)'%[t.year,t.month-1,t.day] }.join(",") %>], ['<%= @talks.map {|t| link_to("#{t.name_of_speaker}: <i>#{t.title}</i>".html_safe, talk_path(t.id)).gsub('"','\"') }.join("','").html_safe %>']);
+});})(jQuery);
+</script>
