Use set_cal_path helper to generate path to calendar_with_talks.js.erb.

--- a/app/views/show/_related.html.erb
+++ b/app/views/show/_related.html.erb
@@ -18,5 +18,5 @@
 	<%= link_talk related_talk.talk %>
 <% end %>
 
-<script type='text/javascript' src='<%= list_path(:id => @list.id, :target => '#talks-calendar', :format => 'calendar_with_talks', :trigger =>'click') %>'></script>
+<script type='text/javascript' src='<%= @cal_path %>'></script>
 
