--- a/app/views/talk/_related.html.erb
+++ b/app/views/talk/_related.html.erb
@@ -17,3 +17,5 @@
 	<% next if related_talk.talk.ex_directory? %>
 	<%= link_talk related_talk.talk %>
 <% end %>
+
+<script type='text/javascript' src='<%= @cal_path %>'></script>
