--- a/app/views/talk/edit.html.erb
+++ b/app/views/talk/edit.html.erb
@@ -86,5 +86,5 @@ Behaviour.register(talk_edit_rules);
     });
     })(jQuery);
 </script>
-<script type='text/javascript' src='<%= list_path(:id => @talk.series.id, :period => 'upcoming', :target => 'input#talk_date_string', :format => 'calendar_with_talks', :trigger =>'hover') %>'></script>
+<script type='text/javascript' src='<%= @cal_path %>'></script>
 
