--- a/app/views/show/calendar_with_talks.js.erb
+++ b/app/views/show/calendar_with_talks.js.erb
@@ -1,5 +1,9 @@
 (function($){
   $(document).ready(function() {
-  $('<%= @target %>').talks('calendar_with_talks', [<%= @talks.map(&:start_time).map { |t| 'new Date(%d,%d,%d)'%[t.year,t.month-1,t.day] }.join(",") %>], ['<%= @talks.map {|t| link_to("#{t.name_of_speaker}: <i>#{t.title}</i>".html_safe, talk_path(t.id)).gsub('"','\"') }.join("','").html_safe %>'], '<%= @trigger %>');
+  $('<%= @target %>').talks('calendar_with_talks',{ 
+  dates: [<%= @talks.map(&:start_time).map { |t| 'new Date(%d,%d,%d)'%[t.year,t.month-1,t.day] }.join(",") %>],
+  titles: ['<%= @talks.map {|t| link_to("#{t.name_of_speaker}: <i>#{t.title}</i>".html_safe, talk_path(t.id)).gsub('"','\"') }.join("','").html_safe %>'],
+  trigger: '<%= @trigger %>',
+  date: '<%= @date ? @date : "" %>'});
 });
 })(jQuery);
