--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,6 +4,7 @@
 <%= javascripts %>
 <%= csrf_meta_tag %>
 <%= stylesheets %>
+<%= stylesheet_link_tag lists_styles_path(:action => 'lists', :update => @styles_last_update) %>
 <%= stylesheet_link_tag 'talks-print', :media => 'print' %>
 <meta http-equiv="content-type" content="text-html; charset=utf-8"/>
 <meta name="Keywords" content='talks, seminars, <%= HOST_INSTITUTE %>'/>
