--- a/app/views/list/show_talk_post_url.js.erb
+++ b/app/views/list/show_talk_post_url.js.erb
@@ -1,1 +1,3 @@
-jQuery('#talk_post_url').html('<br/>Copy and paste this URL into an email (note that anyone with this URL can make a request!):<br/><%= link_to @url, @url %>&nbsp;&nbsp;&nbsp;<%= link_to "[Generate a new one]", @generate_path, :remote => true %> ');
+(function($) {
+$.fn.talks('launch_modal', { id:'talk_post_url' , html:'Copy and paste this URL into an email (note that anyone with this URL can make a request!):<br/><%= link_to @url, @url %>&nbsp;&nbsp;&nbsp;<%= link_to "[Generate a new one]", @generate_path, :remote => true %>'}); 
+})(jQuery);
