--- a/app/views/shared/_sidebox.html.erb
+++ b/app/views/shared/_sidebox.html.erb
@@ -2,13 +2,11 @@
 </div>
 <% if User.current %>
 <h2>Lists that you manage</h2>
-<ul>
-<li><%= link_list User.current.personal_list %></li>
-</ul>
-<ul>
+<div class="btn-group-vertical">
+<%= link_list User.current.personal_list, @list, 'btn' %>
 <% (User.current.lists - [User.current.personal_list]).sort_by { |list| list.name }.each do |list| %>
-<li><%= link_list list %></li>
+<%= link_list list, @list, "btn list#{list.id}" %>
 <% end %>
-</ul>
+</div>
 <% end %>
 <%= render :partial => 'related' %>
